[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/godot-xr-tools/objects/Object_pickable.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/handgun_model_mesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PickableHandGun.gd" type="Script" id=3]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 0, 0.588374, -2.34742, -0.127419, 0.590591, -2.34742, 0.127358, 0.590591, -2.34742, 0, 0.588374, -1.46111, -0.257628, 0.720198, -2.34742, -0.127419, 0.590591, -1.46111, -0.281838, 0.717734, -1.46111, 0.257568, 0.720198, -2.34742, 0.281777, 0.717734, -1.46111, 0.127358, 0.590591, -1.46111, 0.30987, 0.853829, 1.87581, -0.309931, 0.853829, 1.87581, -0.276681, 0.718309, -1.65044, -0.309931, 0.853829, -1.46111, -0.306958, 1.0112, -2.34742, 0.306897, 1.0112, -2.34742, 0.30987, 0.853829, -1.46111, 0.27662, 0.718309, -1.65044, 0.30987, 1.23205, 1.77659, 0.114555, 1.42745, 1.72657, 0.309931, 0.965695, -1.65044, 0, 1.42745, 1.72657, -0.309931, 1.23205, 1.77659, -0.309931, 1.01243, -1.84432, -0.306958, 1.23008, -2.34742, 0.306897, 1.23008, -2.34742, 0.30987, 1.01243, -1.84432, 0.252653, 1.3702, 1.74063, 0.30987, 1.23205, -0.26061, 0.114555, 1.42745, -2.34742, 0, 1.42745, -2.34742, -0.110369, 1.41455, 1.72657, -0.251925, 1.36782, 1.74063, -0.25332, 1.36552, -2.34742, -0.309931, 1.23205, -0.000172138, 0.252168, 1.36207, -2.34742, 0.252653, 1.3702, -0.32758, 0.28202, 1.29924, -0.32758, -0.109823, 1.41291, -2.34742 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -0.183356, -1.51646, 1.33739, 0.183294, -1.51646, 1.33739, -0.317163, -1.49922, 1.46411, -0.183356, 0.579643, -1.46515, 0.317163, -1.49922, 1.46411, 0, 0.579643, -1.46515, 0.183294, 0.579643, -1.46066, -0.317163, -1.3918, 2.25325, -0.317163, 0.722941, -1.46515, 0.317163, -1.3918, 2.25325, 0.317163, 0.723407, -1.46066, 0.317163, 0.863676, -1.46066, -0.209248, -1.37806, 2.35381, -0.317163, 0.655836, 2.19755, -0.317163, 0.863676, -1.46066, 0.317163, 0.655836, 2.19755, 0.209186, -1.37806, 2.35381, -0.145915, 0.863909, 1.41215, 0.317163, 0.863676, 1.86859, -0.209248, 0.568226, 2.20914, -0.317163, 0.863676, 1.86859, 0.209186, 0.568226, 2.20914 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 0.201387, -1.44475, 2.37661, 0.207344, -1.36958, 2.3393, 0.27683, 0.79677, 1.48812, -0.201442, -1.44475, 2.37661, 0.112358, -1.45747, 2.3001, 0.214916, -1.6104, 1.37415, 0.220874, -1.53617, 1.33999, -0.276886, 0.79677, 1.48812, 0.284347, 0.619814, 0.768388, -0.22093, -1.53617, 1.33999, -0.214972, -1.6104, 1.37415, -0.112413, -1.45747, 2.3001, -0.2074, -1.36958, 2.3393, 0.119874, -1.59838, 1.44703, -0.284402, 0.619814, 0.768388, -0.11993, -1.59838, 1.44703 )

[node name="PickableHandGun" instance=ExtResource( 1 )]
script = ExtResource( 3 )
bullet_scene = ExtResource( 4 )
bullet_speed = 100.0

[node name="PickupCenter" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.04, -0.02 )

[node name="CollisionShape" parent="." index="1"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="." index="2"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
shape = SubResource( 4 )

[node name="CollisionShape3" type="CollisionShape" parent="." index="3"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0 )
shape = SubResource( 3 )

[node name="handgun_model_mesh" parent="." index="4" instance=ExtResource( 2 )]

[node name="BulletSpawnPoint" type="Spatial" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.050537, -0.162184 )

[node name="ShotTimer" type="Timer" parent="." index="6"]
wait_time = 0.1

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
